# nice

./: CMakeLists.txt  progress.txt
cmake/: FindSphinx.cmake  NiceConfig.cmake
docs/: CMakeLists.txt  conf.py  index.rst
docs/api_reference/: index.rst
docs/git_concepts/: author.rst  database.rst  index.rst  lockfile.rst  object.rst  refs.rst  sha1.rst  tree.rst
include/libnice/: binary.hpp  config.hpp  filesystem.hpp  format.hpp  functional.hpp  hash.hpp  index.hpp  lockfile.hpp  refs.hpp  string.hpp  workspace.hpp
include/libnice/database/: author.hpp  blob.hpp  commit.hpp  database.hpp  tree.hpp
include/libnice/filesystem/: parents_of.hpp
src/: CMakeLists.txt  config.cpp  hash.cpp  index.cpp  string.cpp
src/database/: database.cpp  tree.cpp
tests/: CMakeLists.txt  index.cpp
tool/: CMakeLists.txt  nice.cpp
tool/command/: add.hpp  command.cpp  command.hpp  commit.hpp  init.hpp
